find overflow bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ body {
   translate: 50%;
   right: 50%;
   position: absolute;
-  overflow-x: hidden;
+
   background-color: $darkblue;
 }
 
